@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 2.1.8 unreleased
 
+* add ingredient to 'extras' recipe to create a GitHub repo
 * fix errors in recipes to implement 'subdomains_app'
 
 h2. 2.1.7 August 17, 2012
